--- a/PRESENTATION.html
+++ b/PRESENTATION.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <head>
-
-
-
+    <title>acceuil</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style presentation.css" />
+    
 </head>
 <body>
 
 
-    
+
 </body>
