--- a/FAQ.html
+++ b/FAQ.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <head>
-
-
+    <title>acceuil</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style faq.css" />
 
 </head>
 <body>
 
 
-    
+
 </body>
