liaison faq html au css

--- a/FAQ.html
+++ b/FAQ.html
@@ -2,7 +2,7 @@
 <head>
     <title>acceuil</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style faq.css" />
+    <link rel="stylesheet" href="style/style faq.css" />
 
 </head>
 <body>
