liaison html avec css

--- a/PRESENTATION.html
+++ b/PRESENTATION.html
@@ -2,7 +2,7 @@
 <head>
     <title>acceuil</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style presentation.css" />
+    <link rel="stylesheet" href="style/style presentation.css" />
     
 </head>
 <body>
