--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>acceuil</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style index.css" />
+    <link rel="stylesheet" href="style/style index.css" />
 
 </head>
 <body>
