ajout des balises <html></html> ...

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>acceuil</title>
     <meta charset="UTF-8">
@@ -6,7 +7,11 @@
 
 </head>
 <body>
+    <aside>
 
+    </aside>
+    <main>
 
-
+    </main>
 </body>
+</html>
