--- a/FAQ.html
+++ b/FAQ.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>acceuil</title>
     <meta charset="UTF-8">
@@ -124,3 +125,4 @@
         </main>
     </section>
 </body>
+</html>
