supression du carroussel dans l'accueil

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     </aside>
     <main>
         <div> <!--Carroussel-->
-            <ul>
-            </ul>
+            <figure>
+                <div id="carroussel-1"></div>
+                <div id="carroussel-2"></div>
+                <div id="carroussel-3"></div>
+                <div id="carroussel-4"></div>
+                <div id="carroussel-5"></div>
+            </figure>
         </div>
         <span> <!-- actus -->
             <div>
@@ -21,30 +26,37 @@
                 <h2> Actualités de l'IUT</h2>
             </div>
             <ul>
-                <li id="article1">
-                    <div class="img-top">
-                        <h1> Choucroute</h1> <!--Sujet-->
-                    </div>
+                <li id="article1" class="choucroute">
+                    <div class="img-top"> </div>
                     <article>
-                        <p class="date"></p>
-                        <h3></h3>
-                        <p></p>
+                        <p class="date"> 16 novembre 2021 </p>
+                        <h3> Cours de web </h3>
+                        <p> Félicitation au prof qui est arrivé en retard</p>
                     </article>
                 </li>
-                <li id="article2">
-                    <div class="img-top">
-                        <h1></h1> <!--Sujet-->
-                    </div>
+                <li id="article2" class="choucroute">
+                    <div class="img-top"></div>
                     <article>
-                        <p class="date"></p>
-                        <h3></h3>
-                        <p></p>
+                        <p class="date"> 10 novembre 2021</p>
+                        <h3> jour ferié</h3>
+                        <p> Demain nous sommes le 11 novembre, les cours n'auront pas lieu. Le 11 novembre est un jour ferié afin de célébrer la victoire écrasante de notre beau pays sur les Schleu.                              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit eaque rem tempore ipsam voluptatibus asperiores corrupti saepe distinctio sapiente, reiciendis molestiae tenetur voluptas quos nostrum? Doloribus fugiat rem culpa adipisci.
+                        </p>
+                    </article>
+                </li>
+                <li id="article3" class="chaise">
+                    <div class="img-top"></div>
+                    <article>
+                        <p class="date"> 10 novembre 2021</p>
+                        <h3> jour ferié</h3>
+                        <p> Demain nous sommes le 11 novembre, les cours n'auront pas lieu. Le 11 novembre est un jour ferié afin de célébrer la victoire écrasante de notre beau pays sur les Schleu.                              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit eaque rem tempore ipsam voluptatibus asperiores corrupti saepe distinctio sapiente, reiciendis molestiae tenetur voluptas quos nostrum? Doloribus fugiat rem culpa adipisci.
+                        </p>
                     </article>
                 </li>
             </ul>
         </span>
         <section> <!-- carte; contact; logos...-->
             <div> <!-- Contact-->
+                <h1>CONTACT</h1>
             </div>
             <div> <!--dessus map-->
             </div>
