ajout de 'vrai' articles

--- a/index.html
+++ b/index.html
@@ -17,30 +17,48 @@
                 <h2> Actualités de l'IUT</h2>
             </div>
             <ul>
-                <li id="article1" class="choucroute">
+                <li id="article1" class="event">
                     <div class="img-top"> </div>
                     <article>
-                        <p class="date"> 16 novembre 2021 </p>
-                        <h3> Cours de web </h3>
-                        <p> Félicitation au prof qui est arrivé en retard</p>
+                        <p class="date"> Du 15/11/2021 au 10/12/2021 </p>
+                        <h3> Exposition: Les fruits et les légumes du monde entier </h3>
+                        <p> L'année a été déclarrée "Année internationale des fruits et des légumes" par l'Assemblée générale des Nations Unis. A cette occasion et pour sensibiliser au rôle important des fruits et légumes dans la nutrition, la sécurité alimentaire et la santé humaine, la bibliothèque accueille l'exposition."</p>
+                        <a href="https://iut.univ-lyon1.fr/campus/bibliotheque/exposition-les-fruits-et-les-legumes-du-monde-entier#.YZjxddDMJQA" >
+                            <button class="plus"></button>
+                        </a>
                     </article>
                 </li>
-                <li id="article2" class="choucroute">
+                <li id="article2" class="formation">
                     <div class="img-top"></div>
                     <article>
-                        <p class="date"> 10 novembre 2021</p>
-                        <h3> jour ferié</h3>
-                        <p> Demain nous sommes le 11 novembre, les cours n'auront pas lieu. Le 11 novembre est un jour ferié afin de célébrer la victoire écrasante de notre beau pays sur les Schleu.                              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit eaque rem tempore ipsam voluptatibus asperiores corrupti saepe distinctio sapiente, reiciendis molestiae tenetur voluptas quos nostrum? Doloribus fugiat rem culpa adipisci.
-                        </p>
+                        <p class="date"> Le 12 novembre 2021</p>
+                        <h3>Forum des métiers de l'Informatique à Bourg-en-Bresse</h3>
+                        <p>Les premières années de BUT informatique organise un forum des métiers visant à rencontrer des professionnels dans le domaine et vous permettre de leur poser des questions.</p>
+                        <a href="https://iut.univ-lyon1.fr/formation/offre-de-formations/informatique-bourg-en-bresse/forum-des-metiers-de-linformatique-a-bourg-en-bresse#.YZjxhtDMJQA" >
+                            <button class="plus"></button>
+                        </a>
                     </article>
                 </li>
-                <li id="article3" class="chaise">
+                <li id="article3" class="event">
                     <div class="img-top"></div>
                     <article>
-                        <p class="date"> 10 novembre 2021</p>
-                        <h3> jour ferié</h3>
-                        <p> Demain nous sommes le 11 novembre, les cours n'auront pas lieu. Le 11 novembre est un jour ferié afin de célébrer la victoire écrasante de notre beau pays sur les Schleu.                              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit eaque rem tempore ipsam voluptatibus asperiores corrupti saepe distinctio sapiente, reiciendis molestiae tenetur voluptas quos nostrum? Doloribus fugiat rem culpa adipisci.
-                        </p>
+                        <p class="date"> &nbsp </p> <!--dirty trics?-->
+                        <h3> Concours d'Écriture 2021/2022 de L'IUT Lyon1</h3>
+                        <p>Les professeur.e.s de techniques d’expression et de communication en partenariat avec la bibliothèque de l’IUT Lyon 1 – Site de Villeurbanne Doua organisent le Concours d’Écriture de l’IUT Lyon 1</p>
+                        <a href="https://iut.univ-lyon1.fr/campus/bibliotheque/concours-decriture-2021-2022-de-liut-lyon-1#.YZjxmdDMJQA" >
+                            <button class="plus"></button>
+                        </a>
+                    </article>
+                </li>
+                <li id="article3" class="formation">
+                    <div class="img-top"></div>
+                    <article>
+                        <p class="date"> &nbsp </p> <!--dirty trics?-->
+                        <h3>Et toi, tu fais quoi après le BAC ?</h3>
+                        <p> Un outil de découverte de métiers à partir de ta personnalité, tes gouts, tes capacités et ton caractère.</p>
+                        <a href="https://iut.univ-lyon1.fr/actualites/et-toi-tu-fais-quoi-apres-le-bac#.YZjwFtDMJQA" >
+                            <button class="plus"></button>
+                        </a>
                     </article>
                 </li>
             </ul>
