--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>acceuil</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style/style index.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>acceuil</title>
+    <link href="style/style index.css" rel="stylesheet">
 </head>
 <body>
     <aside>
     </aside>
     <main>
+        <div class="content"> <!-- Caroussel-->
+            <div class="gallery-item slider-container">
+                <div class="slide-holder">
+                    <img src="Images/Carroussel/Amphi.jpg" alt="" />
+                    <img src="Images/Carroussel/Schema_BUT_2021.png" alt="" />
+                    <img src="Images/Carroussel/Schema_BUT_2021.png" alt="" />
+                    <img src="Images/Carroussel/Amphi.jpg" alt="" />
+                </div>
+            </div>
+        </div>
         <span> <!-- actus -->
             <div>
                 <h1> Actus</h1>
@@ -17,7 +29,7 @@
             <ul>
                 <li id="article1" class="event">
                     <a href="https://iut.univ-lyon1.fr/campus/bibliotheque/exposition-les-fruits-et-les-legumes-du-monde-entier#.YZjxddDMJQA" >
-                        <div class="img-top"> </div>
+                        <div class="img img-top"> </div>
                         <article>
                             <p class="date"> Du 15/11/2021 au 10/12/2021 </p>
                             <h3> Exposition: Les fruits et les légumes du monde entier </h3>
@@ -27,7 +39,7 @@
                 </li>
                 <li id="article2" class="formation">
                     <a href="https://iut.univ-lyon1.fr/formation/offre-de-formations/informatique-bourg-en-bresse/forum-des-metiers-de-linformatique-a-bourg-en-bresse#.YZjxhtDMJQA" >
-                    <div class="img-top"></div>
+                    <div class="img img-top"></div>
                         <article>
                             <p class="date"> Le 12 novembre 2021</p>
                             <h3>Forum des métiers de l'Informatique à Bourg-en-Bresse</h3>
@@ -37,7 +49,7 @@
                 </li>
                 <li id="article3" class="event">
                     <a href="https://iut.univ-lyon1.fr/campus/bibliotheque/concours-decriture-2021-2022-de-liut-lyon-1#.YZjxmdDMJQA" >
-                        <div class="img-top"></div>
+                        <div class="img img-top"></div>
                         <article>
                             <p class="date"> &nbsp </p> <!--dirty trics?-->
                             <h3> Concours d'Écriture 2021/2022 de L'IUT Lyon1</h3>
@@ -47,7 +59,7 @@
                 </li>
                 <li id="article4" class="formation">
                     <a href="https://iut.univ-lyon1.fr/actualites/et-toi-tu-fais-quoi-apres-le-bac#.YZjwFtDMJQA" >
-                        <div class="img-top"></div>
+                        <div class="img img-top"></div>
                         <article>
                             <p class="date"> &nbsp </p> <!--dirty trics?-->
                             <h3>Et toi, tu fais quoi après le BAC ?</h3>
