ajout des logos compris dans la page d'accueil

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <div> <!-- Dessous map-->
             </div>
             <div> <!-- Logos -->
+                <img src="Images/LOGOS/" alt="" />
             </div>
         </section>
     </main>
