ajout des logos sur la page d'accueil + changement des couleurs

--- a/index.html
+++ b/index.html
@@ -80,8 +80,14 @@
             </div>
             <div> <!-- Dessous map-->
             </div>
-            <div> <!-- Logos -->
-                <img src="Images/LOGOS/" alt="" />
+            <div class="logo"> <!-- Logos -->
+                <img src="Images/LOGOS/Region_ARA.png" alt="" />
+                <img src="Images/LOGOS/Rhône_Dpt_.png" alt="" />
+                <img src="Images/LOGOS/Dpt_ain-2018" alt="" />
+                <img src="Images/LOGOS/CCI-Lyon-Metropole-Saint-Etienne-Roanne.png" alt="" />
+                <img src="Images/LOGOS/IUT_ain_rhone_loire.jpg" alt="" />
+                <img src="Images/LOGOS/Lyceebranly.jpg" alt="" />
+                <img src="Images/LOGOS/UDL_COBRANDING_ENS.png" alt="" />
             </div>
         </section>
     </main>
