--- a/FAQ.html
+++ b/FAQ.html
@@ -4,11 +4,16 @@
     <title>acceuil</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/style faq.css">
-
+    <link rel="stylesheet" href="style/style_import.css">
 </head>
 <body>
-    <header> <!--entete-->
-
+    <header>
+        <img src="logo_iut.png" alt="iut lyon1">
+        <nav>
+            <a href="index.html">Acceuil</a>
+            <a href="FAQ.html">FAQ</a>
+            <a href="PRESENTATION.html">Presentation</a>
+        </nav>
     </header>
     <section>
         <aside> <!--marge-->
