déplacement de l'image 'logo_iut' dans le dossier logo

--- a/FAQ.html
+++ b/FAQ.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo_iut.png" alt="iut lyon1">
+        <img src="Images/LOGOS/logo_iut.png" alt="iut lyon1">
         <nav>
             <a href="index.html">Acceuil</a>
             <a href="FAQ.html">FAQ</a>
@@ -44,89 +44,110 @@
             </div>
         </aside>
         <main>
-            <section> <!-- FAQ -->
+            <div> <!-- FAQ -->
                 <section >  <!--partie questions générales-->
                     <section>
-                        <div>
-                            <input id="label-question1" class="question" type="checkbox"/>
-                            <label for="label-question1" class="label-question"> Y a t'il des pré-requis pour avoir accès au BUT INFO et pour ne pas avoir trop de difficultés?</label>
-                            <article class="reponse">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sequi reprehenderit corporis, saepe ad pariatur perferendis minima quam laborum quibusdam earum est dolorum voluptates error possimus delectus dolorem atque accusamus architecto ea nostrum? Laborum, facere! Veritatis dolore voluptatem autem.</article>
-                        </div>
-                        <div>
-                            <input id="label-question2-0" class="question" type="checkbox"/>
-                            <label for="label-question2-0" class="label-question"> Quelles sont les quantités de travail en IUT INFORMATIQUE? </label>
-                            <section class="reponse">
-                                <div>
-                                    <input id="label-question2-1" class="question" type="checkbox"/>
-                                    <label for="label-question2-1" class="label-question"> Dans les matières info? </label>
-                                    <article class="reponse"> Vous aurez environs 18h par semaines de cours d'informatiques ( Algorithmie, web, langages de programmation, Base de Donnée, archi, OS) </article>
-                                </div>
-                                <div>
-                                    <input id="label-question2-2" class="question" type="checkbox"/>
-                                    <label for="label-question2-2" class="label-question"> Dans les matières hors info? </label>
-                                    <article class="reponse"> Vous aurez environs 11h par semaines de cours ayant des liens lointains avec l'informatique ( communication, économie, mathématiques, anglais...) </article>
-                                </div>
-                                <div>
-                                    <input id="label-question2-3" class="question" type="checkbox"/>
-                                    <label for="label-question2-3" class="label-question"> Quels sont les horaire de travail? </label>
-                                    <article class="reponse"> Vous pourrez avoir cours entre 8h et 18h avec une pause de 12h a 14h sauf le vendredi de 12h à13h30</article>
-                                </div>
+                        <details>
+                            <summary> Y a t'il des pré-requis pour avoir accès au BUT INFO et pour ne pas avoir trop de difficultés?</summary>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sequi reprehenderit corporis, saepe ad pariatur perferendis minima quam laborum quibusdam earum est dolorum voluptates error possimus delectus dolorem atque accusamus architecto ea nostrum? Laborum, facere! Veritatis dolore voluptatem autem.</p>
+                        </details>
+                        <details>
+                            <summary> Quelles sont les quantités de travail en IUT INFORMATIQUE? </summary>
+                            <section>
+                                <details>
+                                    <summary>Dans les matières info? </summary>
+                                    <p>Vous aurez environs 18h par semaines de cours d'informatiques ( Algorithmie, web, langages de programmation, Base de Donnée, archi, OS) </p>
+                                </details>
+                                <details>
+                                    <summary> Dans les matières hors info? </summary>
+                                    <p>Vous aurez environs 11h par semaines de cours ayant des liens lointains avec l'informatique ( communication, économie, mathématiques, anglais...) </p>
+                                </details>
+                                <details>
+                                    <summary> Quels sont les horaire de travail? </summary>
+                                    <p> Vous pourrez avoir cours entre 8h et 18h avec une pause de 12h a 14h sauf le vendredi de 12h à13h30</p>
+                                </details>
                             </section>
-                        </div>
-                        <div>
-                            <input id="label-question3" class="question" type="checkbox"/>
-                            <label for="label-question3" class="label-question"> Quelles sont les possibles poursuites d’études et insertion dans le monde du travail?</label>
-                            <article class="reponse"></article>
-                        </div>
-                        <div>
-                            <input id="label-question4" class="question" type="checkbox"/>
-                            <label for="label-question4" class="label-question"> Quel est la compo type d'une promo d'IUT INFO?</label>
-                            <article class="reponse"></article>
-                        </div>
-                        <div>
-                            <input id="label-question5" class="question" type="checkbox"/>
-                            <label for="label-question5" class="label-question"> Devons nous exercer des stages pendant BUT INFO?</label>
-                            <article class="reponse"></article>
-                        </div>
-                        <div>
-                            <input id="label-question6" class="question" type="checkbox"/>
-                            <label for="label-question6" class="label-question"> Quelles sont les périodes de vacances, jours fériés et ponts?</label>
-                            <article class="reponse"></article>
-                        </div>
+                        </details>
+                        <details>
+                            <summary> Quelles sont les possibles poursuites d’études et insertion dans le monde du travail?</summary>
+                            <p></p>
+                        </details>
+                        <details>
+                            <summary> Quel est la compo type d'une promo d'IUT INFO?</summary>
+                            <p></p>
+                        </details>
+                        <details>
+                            <summary> Devons nous exercer des stages pendant BUT INFO?</summary>
+                            <p></p>
+                        </details>
+                        <details>
+                            <summary> Quelles sont les périodes de vacances, jours fériés et ponts?</summary>
+                            <p></p>
+                        </details>
                     </section>
-                    <div>   <!--partie question vie etudiante-->
-                        <input id="label-questionetu" class="question" type="checkbox"/>
-                        <label for="label-questionetu" class="label-question"> Comment est la vie étudiante? </label>
-                        <section class="reponse">
-                            <div>
-                                <input id="label-questionetu1-0" class="question" type="checkbox"/>
-                                <label for="label-questionetu1-0" class="label-question"> Où sont les lieux de restauration?</label>
-                                <section class="reponse">
-                                    <article> Le studio est une des cafeterias du crous, la plus proche(en face de l'IUT au niveau de l’arrêt de tramway IUT Feyssine). les cafeterias du crous vous propose un menus étudiant composé d'un sandwich, d'un yaourt et d'un dessert pour le même prix que le menus du restaurant universitaire. vous pouvez également prendre un plat chaud ou plein d'autre choses (ça ressemble a une supérette). nous vous conseillons de manger ailleurs car les prix sont élevés.</article>
-                                    <article> L’Archimède est aussi une cafèt du crous,en face de l’arrêt de tram INSA EINSTEIN, mais vous permet d'avoir, avec le menu étudiant, des sandwich de meilleur qualité qu'au studio.</article>
-                                    <article> Le restau U "Jussieux" est sur l'avenue Einstein, à deux min à pieds de l’arrêt de tram du même nom. Au restaurant universitaire, vous avez un menu étudiant de six points pour 3,30€ et 1€ pour les boursiers. Une entrée est à un ou deux points, un plat chaud est à 4 points et les desserts sont entre 1 et 3 points. Si vous dépassez les 6 points, chaque points supplémentaires coûtent 55 centimes.</article>
-                                    <article> Vous pouvez également amener vos repas et manger dans les locaux de l'iut ou manger dans les nombreux restaurants situés aux alentours.</article>
-                                    <article>!!!Nous vous rappelons que vous disposerez de 2h pour manger sauf le vendredi d'1h30!!!</article>
+                    <section>   <!--partie question vie etudiante-->
+                        <summary> Comment est la vie étudiante? </summary>
+                        <section>
+                            <details>
+                                <summary> Où sont les lieux de restauration?</summary>
+                                <section>
+                                    <p> Le studio est une des cafeterias du crous, la plus proche(en face de l'IUT au niveau de l’arrêt de tramway IUT Feyssine). les cafeterias du crous vous propose un menus étudiant composé d'un sandwich, d'un yaourt et d'un dessert pour le même prix que le menus du restaurant universitaire. vous pouvez également prendre un plat chaud ou plein d'autre choses (ça ressemble a une supérette). nous vous conseillons de manger ailleurs car les prix sont élevés.</p>
+                                    <p> L’Archimède est aussi une cafèt du crous,en face de l’arrêt de tram INSA EINSTEIN, mais vous permet d'avoir, avec le menu étudiant, des sandwich de meilleur qualité qu'au studio.</p>
+                                    <p> Le restau U "Jussieux" est sur l'avenue Einstein, à deux min à pieds de l’arrêt de tram du même nom. Au restaurant universitaire, vous avez un menu étudiant de six points pour 3,30€ et 1€ pour les boursiers. Une entrée est à un ou deux points, un plat chaud est à 4 points et les desserts sont entre 1 et 3 points. Si vous dépassez les 6 points, chaque points supplémentaires coûtent 55 centimes.</p>
+                                    <p> Vous pouvez également amener vos repas et manger dans les locaux de l'iut ou manger dans les nombreux restaurants situés aux alentours.</p>
+                                    <p>!!!Nous vous rappelons que vous disposerez de 2h pour manger sauf le vendredi d'1h30!!!</p>
                                 </section>
-                            </div>
-                            <div>
-                                <input id="label-questionetu2" class="question" type="checkbox"/>
-                                <label for="label-questionetu2" class="label-question">Quelles est l'accessibilité aux activités sportives autour de l'IUT?</label>
-                                <article class="reponse"></article>
-                            </div>
-                            <div>
-                                <input id="label-questionetu3-0" class="question" type="checkbox"/>
-                                <label for="label-questionetu3-0" class="label-question">Quelles est l'accessibilité aux activités culturelles autour de l'IUT?</label>
-                                <article class="reponse"></article>
-                            </div>
+                            </details>
+                            <details>
+                                <summary>Quelles est l'accessibilité aux activités sportives autour de l'IUT?</summary>
+                                <p></p>
+                            </details>
+                            <details>
+                                <summary>Quelles est l'accessibilité aux activités culturelles autour de l'IUT?</summary>
+                                <p></p>
+                            </details>
                         </section>
-                    </div>
+                    </section>
                 </section>
-                <section class="question">  <!--partie questions parents-->
-                    <button> <div></div></button>
-                    <article class="reponse"></article>
+                <section>  <!--partie questions parents-->
+                    <details>
+                        <summary> Économie <summary>
+                        <section>
+                            <details>
+                                <summary></summary>
+                                <p><p>
+                            </details>
+                            <details>
+                                <summary></summary>
+                                <p><p>
+                            </details>
+                            <details>
+                                <summary></summary>
+                                <p><p>
+                            </details>
+                        </section>
+                    </details>
+                    <details>
+                        <summary>Quels sont les service de santé sur le site de la DOUA?</summary>
+                        <p><p>
+                    </details>
+                    <details>
+                        <summary>Situation géographique</summary>
+                        <section>
+                            <details>
+                                <summary>Quels sont les magasins à proximité du site de la DOUA?</summary>
+                                <p><p>
+                            </details>
+                            <details>
+                                <summary>Quels transports desservent l'IUT?</summary>
+                                <p><p>
+                            </details>
+                        </section>
+                    </details>
                 </section>
-            </section>
+            </div>
+            <div> <!-- Autre question / formulaire -->
+            </div>
         </main>
     </section>
 </body>
