--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="logo_iut.png" alt="iut lyon1">
+        <img src="Images/LOGOS/logo_iut.png" alt="iut lyon1">
         <nav>
             <a href="index.html">Acceuil</a>
             <a href="FAQ.html">FAQ</a>
