petits changements de la faq

--- a/FAQ.html
+++ b/FAQ.html
@@ -111,18 +111,18 @@
                 </section>
                 <section>  <!--partie questions parents-->
                     <details>
-                        <summary> Économie <summary>
+                        <summary> Économie </summary>
                         <section>
                             <details>
-                                <summary></summary>
+                                <summary>Quels sont les coûts de la formation</summary>
                                 <p><p>
                             </details>
                             <details>
-                                <summary></summary>
+                                <summary>Quels sont les coûts des logements autour du campus?</summary>
                                 <p><p>
                             </details>
                             <details>
-                                <summary></summary>
+                                <summary>Quels sont les prix des transports sur lyon?</summary>
                                 <p><p>
                             </details>
                         </section>
