rendu fonctionnelle le  aside(sommaire) et modification de la balise <summary> pour la rendre non selectionnable

--- a/FAQ.html
+++ b/FAQ.html
@@ -20,7 +20,7 @@
             <div class=sommaire>
                 <ul>
                     <li>
-                        <h1> Travail </h1>    <!--titre catégorie-->
+                        <h1><a href="#TRAVAIL">Travail</a></h1>    <!--titre catégorie-->
                         <ul>
 
                             <li>    <!--question-->
@@ -32,13 +32,13 @@
                         </ul>
                     </li>
                     <li>
-                        <h1>Vie étudiante</h1>
+                        <h1><a href="#VIE_ETU">Vie étudiante</a></h1>
                     </li>
                     <li>
-                        <h1>questions parents</h1>
+                        <h1><a href="#PARENT">questions parents</a></h1>
                     </li>
                     <li>
-                        <h1>Nous contacter</h1>
+                        <h1><a href="#AUTRE">Nous contacter</a></h1>
                     </li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sequi reprehenderit corporis, saepe ad pariatur perferendis minima quam laborum quibusdam earum est dolorum voluptates error possimus delectus dolorem atque accusamus architecto ea nostrum? Laborum, facere! Veritatis dolore voluptatem autem.</p>
                         </details>
                         <details>
-                            <summary> Quelles sont les quantités de travail en IUT INFORMATIQUE? </summary>
+                            <summary id="TRAVAIL"> Quelles sont les quantités de travail en IUT INFORMATIQUE? </summary>
                             <section>
                                 <details>
                                     <summary>Dans les matières info? </summary>
@@ -86,7 +86,7 @@
                         </details>
                     </section>
                     <section>   <!--partie question vie etudiante-->
-                        <summary> Comment est la vie étudiante? </summary>
+                        <summary id="VIE_ETU"> Comment est la vie étudiante? </summary>
                         <section>
                             <details>
                                 <summary> Où sont les lieux de restauration?</summary>
@@ -111,7 +111,7 @@
                 </section>
                 <section>  <!--partie questions parents-->
                     <details>
-                        <summary> Économie </summary>
+                        <summary id="PARENT">Économie</summary>
                         <section>
                             <details>
                                 <summary>Quels sont les coûts de la formation</summary>
@@ -147,7 +147,7 @@
                 </section>
             </div>
             <form> <!-- Autre question / formulaire -->
-                <section>
+                <section id="AUTRE">
                     <label for="mail">Mail :</label>
                     <input id="mail">
                 </section>
