--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
     <header>
-        <img src="Images/LOGOS/logo_iut.png" alt="iut lyon1">
+        <div>
+            <img src="Images/LOGOS/logo_iut.png" alt="iut lyon1">
+        </div>
         <nav>
             <a href="index.html">Acceuil</a>
-            <a href="FAQ.html">FAQ</a>
             <a href="PRESENTATION.html">Presentation</a>
+            <a href="FAQ.html">FAQ</a>
         </nav>
     </header>
     <div>
