--- a/index.html
+++ b/index.html
@@ -42,42 +42,55 @@
                 <ul>
                     <li id="article1" class="event">
                         <a href="https://iut.univ-lyon1.fr/campus/bibliotheque/exposition-les-fruits-et-les-legumes-du-monde-entier#.YZjxddDMJQA" >
-                            <div class="img img-top"> </div>
-                            <article>
-                                <p class="date"> Du 15/11/2021 au 10/12/2021 </p>
-                                <h3> Exposition: Les fruits et les légumes du monde entier </h3>
-                                <p> L'année a été déclarrée "Année internationale des fruits et des légumes" par l'Assemblée générale des Nations Unis. A cette occasion et pour sensibiliser au rôle important des fruits et légumes dans la nutrition, la sécurité alimentaire et la santé humaine, la bibliothèque accueille l'exposition."</p>
-                            </article>
+                            <span>
+                                <div class="img img-top"> </div>
+                                <article>
+                                    <p class="date"> Du 15/11/2021 au 10/12/2021 </p>
+                                    <h3> Exposition: Les fruits et les légumes du monde entier </h3>
+                                    <p> L'année a été déclarrée "Année internationale des fruits et des légumes" par l'Assemblée générale des Nations Unis. A cette occasion et pour sensibiliser au rôle important des fruits et légumes dans la nutrition, la sécurité alimentaire et la santé humaine, la bibliothèque accueille l'exposition."</p>
+                                </article>
+                                <span>+</span>
+                            </span>
                         </a>
                     </li>
                     <li id="article2" class="formation">
                         <a href="https://iut.univ-lyon1.fr/formation/offre-de-formations/informatique-bourg-en-bresse/forum-des-metiers-de-linformatique-a-bourg-en-bresse#.YZjxhtDMJQA" >
-                        <div class="img img-top"></div>
-                            <article>
-                                <p class="date"> Le 12 novembre 2021</p>
-                                <h3>Forum des métiers de l'Informatique à Bourg-en-Bresse</h3>
-                                <p>Les premières années de BUT informatique organise un forum des métiers visant à rencontrer des professionnels dans le domaine et vous permettre de leur poser des questions.</p>
-                            </article>
+                            <span>
+                                <div class="img img-top"></div>
+                                <article>
+                                    <p class="date"> Le 12 novembre 2021</p>
+                                    <h3>Forum des métiers de l'Informatique à Bourg-en-Bresse</h3>
+                                    <p>Les premières années de BUT informatique organise un forum des métiers visant à rencontrer des professionnels dans le domaine et vous permettre de leur poser des questions.</p>
+                                </article>
+                                <span>+</span>
+                            </span>
                         </a>
                     </li>
                     <li id="article3" class="event">
                         <a href="https://iut.univ-lyon1.fr/campus/bibliotheque/concours-decriture-2021-2022-de-liut-lyon-1#.YZjxmdDMJQA" >
-                            <div class="img img-top"></div>
-                            <article>
-                                <p class="date"> &nbsp </p> <!--dirty trics?-->
-                                <h3> Concours d'Écriture 2021/2022 de L'IUT Lyon1</h3>
-                                <p>Les professeur.e.s de techniques d’expression et de communication en partenariat avec la bibliothèque de l’IUT Lyon 1 – Site de Villeurbanne Doua organisent le Concours d’Écriture de l’IUT Lyon 1</p>
-                            </article>
+                            <span>
+                                <div class="img img-top"></div>
+                                <article>
+                                    <p class="date"> &nbsp </p> <!--dirty trics?-->
+                                    <h3> Concours d'Écriture 2021/2022 de L'IUT Lyon1</h3>
+                                    <p>
+                                    Les professeur.e.s de techniques d’expression et de communication en partenariat avec la bibliothèque de l’IUT Lyon 1 – Site de Villeurbanne Doua organisent le Concours d’Écriture de l’IUT Lyon 1</p>
+                                </article>
+                                <span>+</span>
+                            </span>
                         </a>
                     </li>
                     <li id="article4" class="formation">
                         <a href="https://iut.univ-lyon1.fr/actualites/et-toi-tu-fais-quoi-apres-le-bac#.YZjwFtDMJQA" >
-                            <div class="img img-top"></div>
-                            <article>
-                                <p class="date"> &nbsp </p> <!--dirty trics?-->
-                                <h3>Et toi, tu fais quoi après le BAC ?</h3>
-                                <p> Un outil de découverte de métiers à partir de ta personnalité, tes gouts, tes capacités et ton caractère.</p>
-                            </article>
+                            <span>
+                                <div class="img img-top"></div>
+                                <article>
+                                    <p class="date"> &nbsp </p> <!--dirty trics?-->
+                                    <h3>Et toi, tu fais quoi après le BAC ?</h3>
+                                    <p> Un outil de découverte de métiers à partir de ta personnalité, tes gouts, tes capacités et ton caractère.</p>
+                                </article>
+                                <span>+</span>
+                            </span>
                         </a>
                     </li>
                 </ul>
@@ -85,6 +98,11 @@
             <section> <!-- carte; contact; logos...-->
                 <div> <!-- Contact-->
                     <h1>CONTACT</h1>
+                    <p>
+                        <span>1 rue de la Technologie</span>
+                        <span>69622 Villeurbanne Cedex</span>
+                        <span>Tél. <a href="tel:334 72 69 20 00"> +33 (0)4 72 69 20 00</a></span>
+                    </p>
                 </div>
                 <div> <!--dessus map-->
                 </div>
