add <html lang=fr>

--- a/FAQ.html
+++ b/FAQ.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <title>acceuil</title>
     <meta charset="UTF-8">
@@ -17,6 +17,7 @@
             <a href="FAQ.html">FAQ</a>
         </nav>
     </header>
+<!--contenu de la page-->
     <section>
         <aside> <!--marge-->
             <div class=sommaire>
