change the href path for linux

--- a/part/header.html
+++ b/part/header.html
@@ -4,7 +4,7 @@
     </div>
     <nav>
         <a href="index.php">Acceuil</a>
-        <a href="PRESENTATION.php">Presentation</a>
-        <a href="FAQ.php">FAQ</a>
+        <a href="presentation.php">Presentation</a>
+        <a href="faq.php">FAQ</a>
     </nav>
 </header>
