utilisation de variables pour les couleurs

--- a/part/footer.html
+++ b/part/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <p><a href="https://iut.univ-lyon1.fr/">Université de lyon 1</a></p>
-    <p>par: <a href="">Vincent CHAVOT</a> et <a href="">Guilhem CROS</a></p>
+    <p>par: Vincent CHAVOT et Guilhem CROS</p>
     <p><a href="#top">retourner en haut</a></p>
 </footer>
