--- a/part/header.html
+++ b/part/header.html
@@ -1,10 +1,10 @@
 <header>
     <div>
-        <img src="Images/LOGOS/logo_iut.png" alt="iut lyon1">
+        <img src="Images/LOGOS/logo_iut.png" alt="Logo iut lyon1">
     </div>
     <nav>
-        <a href="index.php">Acceuil</a>
-        <a href="presentation.php">Presentation</a>
-        <a href="faq.php">FAQ</a>
+        <a href="index.php" aria_label="aller à la page d'accueil">Accueil</a>
+        <a href="presentation.php" aria_label="aller à la page de presentation">Presentation</a>
+        <a href="faq.php" aria_label="aller à la page de FAQ">FAQ</a>
     </nav>
 </header>
