norme w3c pour header.html

--- a/part/header.html
+++ b/part/header.html
@@ -3,8 +3,8 @@
         <img src="Images/LOGOS/logo_iut.png" alt="Logo iut lyon1">
     </div>
     <nav>
-        <a href="index.php" aria_label="aller à la page d'accueil">Accueil</a>
-        <a href="presentation.php" aria_label="aller à la page de presentation">Presentation</a>
-        <a href="faq.php" aria_label="aller à la page de FAQ">FAQ</a>
+        <a href="index.php" aria-label="aller à la page d'accueil">Accueil</a>
+        <a href="presentation.php" aria-label="aller à la page de presentation">Presentation</a>
+        <a href="faq.php" aria-label="aller à la page de FAQ">FAQ</a>
     </nav>
 </header>
